--- a/index.html
+++ b/index.html
@@ -6,22 +6,55 @@
     <title>Lenguas - Android App</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
 </head>
 <body>
-    <div class="container">
+    <div class="container p-3 p-md-5">
         <div class="row">
-            <div class="col-12 col-sm-8 col-md-6">
+            <div class="col-12 col-sm-6 mt-5 d-flex flex-column align-self-center">
                 <h1 class="display-3">Lenguas</h1>
                 <br />
                 <p class="lead">
-                    An Android application to learn native languages.
+                    An Android application to learn native languages
                 </p>
             </div>
-            <div class="col-xs-hidden col-sm-4 col-md-6">
-                <!-- <img src="./images/"/> -->
+            <div class="col-xs-hidden col-sm-6 text-center text-md-start p-3 p-sm-0">
+                <img class="img-fluid custom-height" src="./images/screen-9.png"/>
             </div>
         </div>
+    </div>
+    <div class="container-fluid custom-background">
+                <div class="container mt-3 mt-sm-5 pt-3 pt-sm-5">
+                    <div class="row">
+                        <div class="col-12 col-md-4 d-flex align-items-center">
+                            <p class="text-white">Created as a native Android application, it is compatible with older devices running Android 4.1 and up. The app also has a very small size - around 4 MB.</p>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 p-0">
+                            <img class="img-fluid" src="./images/screen-1.png"/>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 p-0">
+                            <img class="img-fluid" src="./images/screen-2.png"/>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 p-0">
+                            <img class="img-fluid" src="./images/screen-3.png"/>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 p-0">
+                            <img class="img-fluid" src="./images/screen-4.png"/>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 p-0">
+                            <img class="img-fluid" src="./images/screen-5.png"/>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 p-0">
+                            <img class="img-fluid" src="./images/screen-6.png"/>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 p-0">
+                            <img class="img-fluid" src="./images/screen-7.png"/>
+                        </div>
+                        <div class="col-12 col-sm-6 col-md-4 p-0">
+                            <img class="img-fluid" src="./images/screen-8.png"/>
+                        </div>            
+                    </div>
+                </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
