Add README in index

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Lenguas - Android App</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
 </head>
+
 <body>
     <div class="container p-3 p-md-5">
         <div class="row">
@@ -19,43 +22,78 @@
                 </p>
             </div>
             <div class="col-xs-hidden col-sm-6 text-center text-md-start p-3 p-sm-0">
-                <img class="img-fluid custom-height" src="./images/screen-9.png"/>
+                <img class="img-fluid custom-height" src="./images/screen-9.png" />
             </div>
         </div>
     </div>
     <div class="container-fluid custom-background">
-                <div class="container mt-3 mt-sm-5 pt-3 pt-sm-5">
-                    <div class="row">
-                        <div class="col-12 col-md-4 d-flex align-items-center">
-                            <p class="text-white">Created as a native Android application, it is compatible with older devices running Android 4.1 and up. The app also has a very small size - around 4 MB.</p>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4 p-0">
-                            <img class="img-fluid" src="./images/screen-1.png"/>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4 p-0">
-                            <img class="img-fluid" src="./images/screen-2.png"/>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4 p-0">
-                            <img class="img-fluid" src="./images/screen-3.png"/>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4 p-0">
-                            <img class="img-fluid" src="./images/screen-4.png"/>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4 p-0">
-                            <img class="img-fluid" src="./images/screen-5.png"/>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4 p-0">
-                            <img class="img-fluid" src="./images/screen-6.png"/>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4 p-0">
-                            <img class="img-fluid" src="./images/screen-7.png"/>
-                        </div>
-                        <div class="col-12 col-sm-6 col-md-4 p-0">
-                            <img class="img-fluid" src="./images/screen-8.png"/>
-                        </div>            
-                    </div>
+        <div class="container mt-3 mt-sm-5 pt-3 pt-sm-5">
+            <div class="row">
+                <div class="col-12 col-md-4 d-flex align-items-center">
+                    <p class="text-white">Created as a native Android application, it is compatible with older devices
+                        running Android 4.1 and up. The app also has a very small size - around 4 MB.</p>
                 </div>
+                <div class="col-12 col-sm-6 col-md-4 p-0">
+                    <img class="img-fluid" src="./images/screen-1.png" />
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 p-0">
+                    <img class="img-fluid" src="./images/screen-2.png" />
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 p-0">
+                    <img class="img-fluid" src="./images/screen-3.png" />
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 p-0">
+                    <img class="img-fluid" src="./images/screen-4.png" />
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 p-0">
+                    <img class="img-fluid" src="./images/screen-5.png" />
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 p-0">
+                    <img class="img-fluid" src="./images/screen-6.png" />
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 p-0">
+                    <img class="img-fluid" src="./images/screen-7.png" />
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 p-0">
+                    <img class="img-fluid" src="./images/screen-8.png" />
+                </div>
+            </div>
+        </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <div class="container-fluid">
+        <div class="container mt-3 mt-sm-5 pt-3 pt-sm-5 pb-5">
+            <div class="row">
+                <div class="col-12 col-lg-10 offset-lg-1">
+                    <p>This project is largely the result of a joint effort by the <a
+                            href="https://oei.int/oficinas/bolivia">Iberoamerican Organization States</a>. Multiple teams
+                        contributed to this project including linguists, graphic designers, sound engineers, and developers. My
+                        contribution was the development of this Android application, but I also maintained the underlying
+                        service that makes this app work.</p>
+                    <br />
+                    <h3>Native Android Development</h2>
+                    <p>Some benefits of creating a native Android app was the small package size. small memory usage, and having
+                        access to peripherals. The app is available in the <a
+                            href="https://play.google.com/store/apps/details?id=bo.oei.lenguas.lenguas">Play Store</a>, but the
+                        server is no longer maintained so it may have a very limited functionality.</p>
+                    <p>The app follows the <a
+                            href="https://developer.android.com/guide/components/activities/activity-lifecycle">Activity
+                            Lifecycle</a> and the <a href="https://developer.android.com/guide/fragments/lifecycle">Fragment
+                            Lifecycle</a>. Besides, it uses libraries from the Android ecosystem which work nicely together.
+                        These includes:</p>
+                    <ul>
+                        <li>Retrofit</li>
+                        <li>RxJava</li>
+                        <li>Gson</li>
+                        <li>Room</li>
+                        <li>Dagger</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
