--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-12 col-md-4 d-flex align-items-center">
                     <p class="text-white">Created as a native Android application, it is compatible with older devices
-                        running Android 4.1 and up. The app also has a very small size - around 4 MB.</p>
+                        running Android 4.1 and up. The app has a very small size - just above 4 MB!</p>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 p-0">
                     <img class="img-fluid" src="./images/screen-1.png" />
@@ -64,17 +64,18 @@
         <div class="container mt-3 mt-sm-5 pt-3 pt-sm-5 pb-5">
             <div class="row">
                 <div class="col-12 col-lg-10 offset-lg-1">
-                    <p>This project is largely the result of a joint effort by the <a
-                            href="https://oei.int/oficinas/bolivia">Iberoamerican Organization States</a>. Multiple teams
-                        contributed to this project including linguists, graphic designers, sound engineers, and developers. My
-                        contribution was the development of this Android application, but I also maintained the underlying
-                        service that makes this app work.</p>
+                    <p>This project is the result of a joint effort by the <a
+                            href="https://oei.int/oficinas/bolivia">Iberoamerican Organization States</a>. and multiple 
+                            collaborators, myself included. Multidisciplinary teams contributed to this project including 
+                            linguists, graphic designers, sound engineers, and developers. I personally contributed with 
+                            the design and development of the Android application and with the maintenance of the underlying 
+                            service that makes the app work.</p>
                     <br />
                     <h3>Native Android Development</h2>
-                    <p>Some benefits of creating a native Android app was the small package size. small memory usage, and having
-                        access to peripherals. The app is available in the <a
+                    <p>Some benefits of creating a native Android app are the small footprint, efficient memory usage, and 
+                            access to peripherals. The app is available in the <a
                             href="https://play.google.com/store/apps/details?id=bo.oei.lenguas.lenguas">Play Store</a>, but the
-                        server is no longer maintained so it may have a very limited functionality.</p>
+                            server is no longer maintained so it may have a very limited functionality.</p>
                     <p>The app follows the <a
                             href="https://developer.android.com/guide/components/activities/activity-lifecycle">Activity
                             Lifecycle</a> and the <a href="https://developer.android.com/guide/fragments/lifecycle">Fragment
