--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
             <div class="row">
                 <div class="col-12 col-lg-10 offset-lg-1">
                     <p>This project is the result of a joint effort by the <a
-                            href="https://oei.int/oficinas/bolivia">Iberoamerican Organization States</a>. and multiple 
-                            collaborators, myself included. Multidisciplinary teams contributed to this project including 
-                            linguists, graphic designers, sound engineers, and developers. I personally contributed with 
-                            the design and development of the Android application and with the maintenance of the underlying 
-                            service that makes the app work.</p>
+                            href="https://oei.int/oficinas/bolivia">Iberoamerican Organization States</a>and its multidisciplinary 
+                            teams that include linguists, graphic designers, sound engineers, and developers. I personally 
+                            contributed with the design and development of the Android application, and with the maintenance of 
+                            the underlying service that makes the app work.</p>
                     <br />
                     <h3>Native Android Development</h2>
                     <p>Some benefits of creating a native Android app are the small footprint, efficient memory usage, and 
